testsuite/tests/typing-gadts/omega07.ml.reference

# * * * * *                       type ('a, 'b) sum = Inl of 'a | Inr of 'b
type zero = Zero
type 'a succ
type 'a nat = NZ : zero nat | NS : 'a nat -> 'a succ nat
#             type ('a, 'b) seq =
    Snil : ('a, zero) seq
  | Scons : 'a * ('a, 'n) seq -> ('a, 'n succ) seq
#   val l1 : (int, zero succ succ) seq = Scons (3, Scons (5, Snil))
#       *         type ('a, 'b, 'c) plus =
    PlusZ : 'a nat -> (zero, 'a, 'a) plus
  | PlusS : ('a, 'b, 'c) plus -> ('a succ, 'b, 'c succ) plus
#         val length : ('a, 'b) seq -> 'b nat = <fun>
#   *                     type ('a, 'b, 'c) app =
    App : ('a, 'p) seq * ('n, 'm, 'p) plus -> ('a, 'n, 'm) app
val app : ('a, 'b) seq -> ('a, 'c) seq -> ('a, 'b, 'c) app = <fun>
# *                           type tp
type nd
type ('a, 'b) fk
type 'a shape =
    Tp : tp shape
  | Nd : nd shape
  | Fk : 'a shape * 'b shape -> ('a, 'b) fk shape
#           type tt
type ff
type 'a boolean = BT : tt boolean | BF : ff boolean
#                 type ('a, 'b) path =
    Pnone : 'a -> (tp, 'a) path
  | Phere : (nd, 'a) path
  | Pleft : ('x, 'a) path -> (('x, 'y) fk, 'a) path
  | Pright : ('y, 'a) path -> (('x, 'y) fk, 'a) path
#         type ('a, 'b) tree =
    Ttip : (tp, 'a) tree
  | Tnode : 'a -> (nd, 'a) tree
  | Tfork : ('x, 'a) tree * ('y, 'a) tree -> (('x, 'y) fk, 'a) tree
#   val tree1 : (((tp, nd) fk, (nd, nd) fk) fk, int) tree =
  Tfork (Tfork (Ttip, Tnode 4), Tfork (Tnode 4, Tnode 3))
#                     val find : ('a -> 'a -> bool) -> 'a -> ('b, 'a) tree -> ('b, 'a) path list =
  <fun>
#             Characters 179-180:
    | Pleft p, Tfork(l,_) -> extract p l
                                       ^
Error: This expression has type (&x5, 'a) tree
       but an expression was expected of type (&x5, 'a) tree
       The type constructor &x5 would escape its scope
#             type ('a, 'b) le =
    LeZ : 'a nat -> (zero, 'a) le
  | LeS : ('n, 'm) le -> ('n succ, 'm succ) le
#       type 'a even = EvenZ : zero even | EvenSS : 'n even -> 'n succ succ even
#         type one = zero succ
type two = one succ
type three = two succ
type four = three succ
#       val even0 : zero even = EvenZ
val even2 : two even = EvenSS EvenZ
val even4 : four even = EvenSS (EvenSS EvenZ)
#   val p1 : (two, one, three) plus = PlusS (PlusS (PlusZ (NS NZ)))
#         val summandLessThanSum : ('a, 'b, 'c) plus -> ('a, 'c) le = <fun>
#                             type ('a, 'b) equal = Eq : ('a, 'a) equal
val sameNat : 'a nat -> 'b nat -> ('a, 'b) equal option = <fun>
#             val smaller : ('a succ, 'b succ) le -> ('a, 'b) le = <fun>
#   type ('a, 'b) diff = Diff : 'c nat * ('a, 'c, 'b) plus -> ('a, 'b) diff
#   * * * * * * * * *                 Characters 462-463:
        match diff q x y with Diff (m, p) -> Diff (m, PlusS p)
                     ^
Error: This expression has type &x13 nat
       but an expression was expected of type &x13 nat
       The type constructor &x13 would escape its scope
#               Characters 87-243:
  ..match a, b,le with (* warning *)
    | NZ, m, LeZ _ -> Diff (m, PlusZ m)
    | NS x, NS y, LeS q ->
        match diff q x y with Diff (m, p) -> Diff (m, PlusS p)
Warning 8: this pattern-matching is not exhaustive.
Here is an example of a value that is not matched:
(NS _, NZ, _)
val diff : ('a, 'b) le -> 'a nat -> 'b nat -> ('a, 'b) diff = <fun>
#               val diff : ('a, 'b) le -> 'b nat -> ('a, 'b) diff = <fun>
#             type ('a, 'b) filter = Filter : ('m, 'n) le * ('a, 'm) seq -> ('a, 'n) filter
val leS' : ('a, 'b) le -> ('a, 'b succ) le = <fun>
#                   val filter : ('a -> bool) -> ('a, 'b) seq -> ('a, 'b) filter = <fun>
#                             type ('a, 'b, 'c) balance =
    Less : ('h, 'h succ, 'h succ) balance
  | Same : ('h, 'h, 'h) balance
  | More : ('h succ, 'h, 'h succ) balance
type 'a avl =
    Leaf : zero avl
  | Node : ('hL, 'hR, 'hMax) balance * 'hL avl * int *
      'hR avl -> 'hMax succ avl
type avl' = Avl : 'h avl -> avl'
#                 val empty : avl' = Avl Leaf
val elem : int -> 'a avl -> bool = <fun>
#                           val rotr :
  'a succ succ avl ->
  int -> 'a avl -> ('a succ succ avl, 'a succ succ succ avl) sum = <fun>
#                         val rotl :
  'a avl ->
  int -> 'a succ succ avl -> ('a succ succ avl, 'a succ succ succ avl) sum =
  <fun>
#                                               Characters 550-553:
          | Inl b -> Inl (Node (bal, a, y, b) : n avl)
                                ^^^
Error: This expression has type (&x74, &x75, &x76) balance
       but an expression was expected of type (&x74, &x75, &x76) balance
       The type constructor &x76 would escape its scope
#           Characters 32-35:
    match ins x t with
          ^^^
Error: Unbound value ins
#                                                                                                                                 Characters 382-383:
Error: This expression has type &x84 avl
       but an expression was expected of type &x87 succ avl
       Type &x84 = &x87 succ is not compatible with type &x87 succ 
       The type constructor &x87 would escape its scope
#           Characters 32-35:
    match del x t with
          ^^^
Error: Unbound value del
#                             type red
type black
type ('a, 'b) sub_tree =
    Bleaf : (black, zero) sub_tree
  | Rnode : (black, 'n) sub_tree * int *
      (black, 'n) sub_tree -> (red, 'n) sub_tree
  | Bnode : ('cL, 'n) sub_tree * int *
      ('cR, 'n) sub_tree -> (black, 'n succ) sub_tree
type rb_tree = Root : (black, 'n) sub_tree -> rb_tree
#               type dir = LeftD | RightD
type ('a, 'b) ctxt =
    CNil : (black, 'n) ctxt
  | CRed : int * dir * (black, 'n) sub_tree *
      (red, 'n) ctxt -> (black, 'n) ctxt
  | CBlk : int * dir * ('c1, 'n) sub_tree *
      (black, 'n succ) ctxt -> ('c, 'n) ctxt
#                         val blacken : (red, 'a) sub_tree -> (black, 'a succ) sub_tree = <fun>
type 'a crep = Red : red crep | Black : black crep
val color : ('a, 'b) sub_tree -> 'a crep = <fun>
#                   val fill : ('a, 'b) ctxt -> ('a, 'b) sub_tree -> rb_tree = <fun>
#             val recolor :
  dir ->
  int ->
  ('a, 'b) sub_tree ->
  dir ->
  int ->
  (black, 'b succ) sub_tree -> ('c, 'b) sub_tree -> (red, 'b succ) sub_tree =
  <fun>
#             val rotate :
  dir ->
  int ->
  (black, 'a) sub_tree ->
  dir ->
  int ->
  (black, 'a) sub_tree -> (red, 'a) sub_tree -> (black, 'a succ) sub_tree =
  <fun>
#                     val repair : (red, 'a) sub_tree -> ('b, 'a) ctxt -> rb_tree = <fun>
#                     val ins : int -> ('a, 'b) sub_tree -> ('a, 'b) ctxt -> rb_tree = <fun>
#   val insert : int -> rb_tree -> rb_tree = <fun>
#                                                                                                 type 'a term =
    Const : int -> int term
  | Add : (int * int -> int) term
  | LT : (int * int -> bool) term
  | Ap : ('a -> 'b) term * 'a term -> 'b term
  | Pair : 'a term * 'b term -> ('a * 'b) term
val ex1 : int term = Ap (Add, Pair (Const 3, Const 5))
val ex2 : (int * int) term =
  Pair (Ap (Add, Pair (Const 3, Const 5)), Const 1)
val eval_term : 'a term -> 'a = <fun>
type 'a rep =
    Rint : int rep
  | Rbool : bool rep
  | Rpair : 'a rep * 'b rep -> ('a * 'b) rep
  | Rfun : 'a rep * 'b rep -> ('a -> 'b) rep
type ('a, 'b) equal = Eq : ('a, 'a) equal
val rep_equal : 'a rep -> 'b rep -> ('a, 'b) equal option = <fun>
#                                                               Characters 822-823:
    | Abs (x, r, e) -> fun v -> eval_term (Assoc (x, r, v) :: env) e
                                                        ^
Error: This expression has type &x117 but an expression was expected of type
         &x117
       The type constructor &x117 would escape its scope
#           Characters 11-73:
  let ex3 = Abs ("x", Rint, Ap (Add, Pair (Var("x",Rint), Var("x",Rint))))
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: Unbound constructor Abs
#                                             type rnil
type ('a, 'b, 'c) rcons
type 'a is_row =
    Rnil : rnil is_row
  | Rcons : 'c is_row -> ('a, 'b, 'c) rcons is_row
type ('a, 'b) lam =
    Const : int -> ('e, int) lam
  | Var : 'a -> (('a, 't, 'e) rcons, 't) lam
  | Shift : ('e, 't) lam -> (('a, 'q, 'e) rcons, 't) lam
  | Abs : 'a * (('a, 's, 'e) rcons, 't) lam -> ('e, 's -> 't) lam
  | App : ('e, 's -> 't) lam * ('e, 's) lam -> ('e, 't) lam
type x = X
type y = Y
val ex1 : ((x, 'a -> 'b, (y, 'a, 'c) rcons) rcons, 'b) lam =
  App (Var X, Shift (Var Y))
val ex2 : ('a, ('b -> 'c) -> 'b -> 'c) lam =
  Abs (<poly>, Abs (<poly>, App (Shift (Var <poly>), Var <poly>)))
#                           Characters 276-277:
    | Econs (_, _, r), Shift e -> eval_lam r e
                                             ^
Error: This expression has type (&x127, t) lam
       but an expression was expected of type (&x127, 'a) lam
       The type constructor &x127 would escape its scope
#                               Characters 43-101:
  let env0 = Econs (Zero, 0, Econs (Suc, succ, Econs (Add, (+), Enil)))
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: Unbound constructor Econs
#     Characters 10-18:
  let v3 = eval_lam env0 ex3
           ^^^^^^^^
Error: Unbound value eval_lam
#       *                                       type 'a rep = I : int rep | Ar : 'a rep * 'b rep -> ('a -> 'b) rep
val compare : 'a rep -> 'b rep -> (string, ('a, 'b) equal) sum = <fun>
#                     type term =
    C of int
  | Ab : string * 'a rep * term -> term
  | Ap of term * term
  | V of string
type 'a ctx =
    Cnil : rnil ctx
  | Ccons : 't * string * 'x rep * 'e ctx -> ('t, 'x, 'e) rcons ctx
#                             type 'a checked =
    Cerror of string
  | Cok : ('e, 't) lam * 't rep -> 'e checked
val lookup : string -> 'a ctx -> 'a checked = <fun>
#                                                   val tc : 'a nat -> 'b ctx -> term -> 'b checked = <fun>
#             Characters 51-54:
           Ccons (Suc, "S", Ar(I,I),
                  ^^^
Error: Unbound constructor Suc
# Characters 15-19:
  let c1 = tc NZ ctx0 ex1;;
                 ^^^^
Error: Unbound value ctx0
# Characters 14-17:
  let ex2 = Ap (ex1, C 3);;
                ^^^
Error: This expression has type
         ((x, 'a -> 'b, (y, 'a, 'c) rcons) rcons, 'b) lam
       but an expression was expected of type term
# Characters 15-19:
  let c2 = tc NZ ctx0 ex2;;
                 ^^^^
Error: Unbound value ctx0
#           Characters 79-87:
    | Cok (e, I) -> (eval_lam env e : int)
                     ^^^^^^^^
Error: Unbound value eval_lam
#   Characters 10-22:
  let v2 = eval_checked env0 c2 ;;
           ^^^^^^^^^^^^
Error: Unbound value eval_checked
#                                             type pexp
type pval
type 'a mode = Pexp : pexp mode | Pval : pval mode
type ('a, 'b) tarr
type tint
type ('a, 'b) rel =
    IntR : (tint, int) rel
  | IntTo : ('b, 's) rel -> ((tint, 'b) tarr, int -> 's) rel
type ('a, 'b, 'c) lam =
    Const : ('a, 'b) rel * 'b -> (pval, 'env, 'a) lam
  | Var : 'a -> (pval, ('a, 't, 'e) rcons, 't) lam
  | Shift : ('m, 'e, 't) lam -> ('m, ('a, 'q, 'e) rcons, 't) lam
  | Lam : 'a *
      ('m, ('a, 's, 'e) rcons, 't) lam -> (pval, 'e, ('s, 't) tarr) lam
  | App : ('m1, 'e, ('s, 't) tarr) lam *
      ('m2, 'e, 's) lam -> (pexp, 'e, 't) lam
#                   val ex1 : (pexp, 'a, tint) lam =
  App (Lam (<poly>, Var <poly>), Const (IntR, <poly>))
val mode : ('a, 'b, 'c) lam -> 'a mode = <fun>
#               type ('a, 'b) sub =
    Id : ('r, 'r) sub
  | Bind : 't * ('m, 'r2, 'x) lam *
      ('r, 'r2) sub -> (('t, 'x, 'r) rcons, 'r2) sub
  | Push : ('r1, 'r2) sub -> (('a, 'b, 'r1) rcons, ('a, 'b, 'r2) rcons) sub
type ('a, 'b) lam' = Ex : ('m, 's, 't) lam -> ('s, 't) lam'
#                               Characters 270-271:
    | Shift e, Bind (_, _, r) -> subst e r
                                         ^
Error: This expression has type (&x177, s) sub
       but an expression was expected of type (&x177, 'a) sub
       The type constructor &x177 would escape its scope
#       type closed = rnil
type 'a rlam = ((pexp, closed, 'a) lam, (pval, closed, 'a) lam) sum
#                             Characters 179-184:
          match subst body (Bind (x, v, Id)) with Ex term ->
                ^^^^^
Error: Unbound value subst
#                                 Characters 511-515:
        | Pval, Pval -> rule e1 e2
                        ^^^^
Error: Unbound value rule
# 
